Fix hompage top clipping on mobile

--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -7,6 +7,7 @@
 	justify-content: center;
 
 	@media only screen and (max-width: 600px) {
+		margin-top: 5rem;
 		flex-direction: column;
 	}
 }
